# validate-sops

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/workflows/: pull-request-open.yml
tests/: conftest.py  test_validate_sops.py
tests/integration/: test_main.py
tests/unit/: test_ignore.py  test_io.py  test_sops.py
validate_sops/: __main__.py  ignore.py  io.py  logger.py  main.py  sops.py
